@@ -1,3 +1,10 @@
+2008-04-28  Murray Cumming  <murrayc@murrayc.com>
+
+	* gnome_lirc_properties/net/services.py: post_file(): 
+	catch httplib.HTTPException as well as the existing urllib2 errors, 
+	because multipart_opener.open() raises this exception. This fixes the 
+	crash in bug #529903, but I still don't know how to make the upload work.
+
 2008-04-25  Murray Cumming  <murrayc@murrayc.com>
 
 	* gnome_lirc_properties/ui/RemoteControlProperties.py
